fix: dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,16 +18,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
-
 .container {
   padding: 0 15px;
   margin: 0 400px;
